--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,7 +28,8 @@
         </div>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login admin</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login / Sing up</a></li>
+        <li><a href="#"><i class="fas fa-shopping-cart"></i> Cos</a></li>
       </ul>
     </div>
   </nav>
