--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 
 {% extends 'main.html' %}{% load static %}
 {% block content %}
-<div class="container container-fluid">
+<div class="container container-fluid bg-dark">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
