--- a/templates/footer.html
+++ b/templates/footer.html
@@ -23,7 +23,7 @@
                 <p class="color-white">
                     Locatie Manastur, Cluj-Napoca
                     <br>
-                    Adresa: <a href="{% url 'location' 'strada Sesului numarul 33A' %}">strada Sesului numarul 33A</a> 
+                    Adresa:<span class="open-location"> strada Sesului 33A</span>
                        
                     <br>
                     Telefon: 0364 990 sau 0744 215 250
@@ -31,7 +31,7 @@
                 <p class="color-white">
                     Locatie Marasti, Cluj-Napoca
                     <br>
-                    Adresa:<a href="{% url 'location' 'Strada Teodor Mihali 29' %}">Strada Teodor Mihali 29</a>  
+                    Adresa:<span class="open-location"> strada Teodor Mihali 29</span>  
                     <br>
                     Telefon: 0364 990 sau 0744 215 250
                 </p>
