--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,7 +11,7 @@
     {% endif %}
 </div>
 
-<div class="container container-text">
+<div class="container">
     <div class="row">
         {% if "search" not in type %}
         <div class="tags-window col-lg-2 color-white">
@@ -22,14 +22,18 @@
                 <form>
                     {% for tag in tags %}
                     <div class="checkbox">
-                        <label><input type="checkbox" value="">{{tag.name}}</label>
+                        <label><input type="checkbox" value="">{{tag.title}}</label>
                     </div>
                     {% endfor %}
                 </form>
             </div>
         </div>
         {% endif %}
+        {% if 'search' not in type %}
         <div class="col-lg-10">
+        {% else %}
+        <div class="col-lg-12">
+        {% endif %}
             <div class="products-window row">
             {% for product in products %}
                 <div class="col-lg-3">
@@ -41,7 +45,7 @@
                                     <h4 class="media-heading"><a href="{% url 'single-product' product.id %}">{{product.title}}</a></h4>
                                     <p>Gramaj: {{product.quantity}} gr</p>
                                     <p>Pret: {{product.price}} ron</p>
-                                    <button class="btn-add-cos btn btn--main--outline" id="{{product.id}}">Adauga in cos</button>
+                                    <button class="btn-add-cart-food btn btn--main--outline" id="{{product.id}}">Adauga in cos</button>
                                 </div>
                             </div>
                         </div>
@@ -50,6 +54,34 @@
             {% endfor %}
             </div>
         </div>
+    </div>
+</div>
+
+<div class="container bg-dark" id="drinks-carousel">
+    <!-- arrow left -->
+    <div class="drinks-carousel-arrow" id="drinks-carousel-arrow-left">
+        <i class="fas fa-chevron-left fa-3x"></i>
+    </div>
+    
+    <div class="drinks-carousel-content">
+        {% for drink in drinks %}
+        <div class="card drinks-carousel-card" style="width: 200px">
+            <div class="card__body">
+                <img class="avatar avatar--md" src="{{drink.featured_image.url}}" style="border:none;margin-top: 0;"/>
+                <h3 style="font-size: 16px;">{{drink.title}}</h3>
+                <p style="font-size: 14px;">
+                    {{drink.quantity}}ml
+                    <br>
+                    pret: {{drink.price}}lei
+                </p>
+                <button class="btn-add-cart-drink btn btn--main--outline" id="{{drink.id}}">Adauga in cos</button>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    <!-- arrow right -->
+    <div class="drinks-carousel-arrow" id="drinks-carousel-arrow-right">
+        <i class="fas fa-chevron-right fa-3x"></i>
     </div>
 </div>
 {% endblock content %}
