--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -200,6 +200,9 @@ html{
     transform: translateX(-10px);
 }
 /* Checkout ------------------------------------------------------ */
+#checkout {
+    border-radius: 30px !important;
+}
 #progress-bar-checkout{
     background-color: pink;
     position: relative;
@@ -275,9 +278,9 @@ html{
 #content-checkout .container-review-info{
     height: 50px;
 }
-#content-checkout .card{
+/* #content-checkout .card{
     
-}
+} */
 #content-checkout .card__body{
     padding: 0;
     display: flex;
@@ -313,4 +316,20 @@ input[type=number]::-webkit-inner-spin-button {
 .checkout-prev, .checkout-next{
     color: #5bc0de;
     cursor: pointer;
+    font-weight: 400;
+}
+.total-cost{
+    text-align: end;
+     margin-right: 4rem;
+}
+.total-cost .span-text{
+    color: black;
+    font-size: 20px;
+    font-weight: 500;
+}
+#content-checkout.product-cost{
+    
+}
+#content-checkout.product-cost-p{
+    
 }
