--- a/products/templates/products/buy_products.html
+++ b/products/templates/products/buy_products.html
@@ -78,7 +78,7 @@
             <div class=" container-info container-order-info ">
                 <h2 class="container-title page-header">Date personale & metoda plata</h2>
                 <div class="container-content">
-                    
+                    {% include 'order_form.html' %} 
                 </div>
                 <ul class="pager">
                     <li><span class="checkout-prev">Inapoi</span></li>
