--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -334,9 +334,4 @@ input[type=number]::-webkit-inner-spin-button {
     font-size: 20px;
     font-weight: 500;
 }
-/* #content-checkout.product-cost{
-    
-}
-#content-checkout.product-cost-p{
-    
-} */
+/* Form order----------------------------------- */
