--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="container"> 
-    <div class="row">
+    <div class="row bg-dark">
         {% if "search" not in type %}
         <div class="tags-window col-lg-2 color-white">
             <div class="page-header color-white" style="margin-top:0;">
