--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="row py color-white">
+    <div class="row py color-white bg-dark">
         <div class="container">
             <div class="col-sm-3 mx">
                 <div class="page-header">
