--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,7 +28,7 @@
         </div>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login / Sing up</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logare / Inregistrare</a></li>
         <li>
           <a href="{% url 'show-products-cart' %}" id="show-products-market">
             <i class="fas fa-shopping-cart"></i> 
