--- a/templates/main.html
+++ b/templates/main.html
@@ -23,13 +23,35 @@
     {% block content %} 
     {% endblock content %} 
     {% include 'footer.html' %}
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
     
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Comanda plasa cu success!</h4>
+          </div>
+          <div class="modal-body">
+            <p>Vei primi in curand un email de confirmare a comenzii impreuna cu factura virtuala.</p>
+            <p>De asemenea factura poate fi descarcata de 
+                  <span id="download-bill-btn" style="text-decoration: underline;color: rgb(35, 35, 243);cursor: pointer;" > aici</span>
+              .</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal" id="closeModal">Inchide</button>
+          </div>
+        </div>
+    
+      </div>
+    </div>
     <script src="../static/js/javascript.js"></script>
     <script>
       
     const numberOfProducts = '{{numberOfProducts}}'
+    // const badge = document.querySelector('.badge')
     if (numberOfProducts > 0)
-    badge.textContent = numberOfProducts
+      badge.textContent = numberOfProducts
 
     const sendProducts=function(market){
       $.ajax({
